# devicon-lookup

./: .drone.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  release.toml  report.20200330.194400.91528.0.001.json
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: tests.yml
benches/: benchmark_cli.rs
results/chromebook/: baseline.md  cached.md  plain.md
results/chromebook/large/: baseline.md  cached.md  plain.md
results/chromebook/small/: baseline.md  cached.md  plain.md
results/macbook/: baseline.md  cached.md  plain.md
results/macbook/large/: baseline.md  cached.md  plain.md
results/macbook/small/: baseline.md  cached.md  plain.md
script/: test-binary-search.sh
src/: USAGE.txt  args.rs  devicon_lookup.rs  devicon_lookup1.rs  file.rs  file1.rs  file_ext.rs  lines.rs  main.rs
src/devicon_lookup/: color.rs  icon.rs  map.rs  parsers.rs
src/devicon_lookup/parsers/: color.rs  prefix.rs  regex.rs
tests/: base.rs  directory.rs  integration.rs  prefix.rs  regex.rs  strip_ansi.rs  utf8.rs
tests/fixtures/: all-types-grep-large.txt  all-types-grep.txt  all-types-large.txt  all-types.txt
