[package]
name = "devicon-lookup"
description = "Prepend the correct devicon to the beginning of each filename"
version = "0.7.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
repository = "https://github.com/coreyja/devicon-lookup"
license = "MIT"
edition = "2018"

[dependencies]
docopt = "1"
lazy_static = "1.4.0"
phf = "0.8.0"
regex = "1.3.6"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
phf_codegen = "0.7.24"

[dev-dependencies]
assert_cmd = "0.11.1"
cargo-release = "0.13.3"
colored = "1.9"
criterion = "0.3"

[[bench]]
name = "benchmark_cli"
harness = false
