[package]
name = "devicon-lookup"
description = "Prepend the correct devicon to the beginning of each filename"
version = "0.8.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
repository = "https://github.com/coreyja/devicon-lookup"
license = "MIT"
edition = "2018"

[dependencies]
docopt = "1"
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }
regex = "1.3.8"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
cargo-release = "0.13.4"
colored = "1.9"
criterion = "0.3"
predicates = "1.0.4"

[[bench]]
name = "benchmark_cli"
harness = false
