[package]
name = "devicon-lookup"
description = "Prepend the correct devicon to the beginning of each filename"
version = "0.8.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
repository = "https://github.com/coreyja/devicon-lookup"
license = "MIT"
edition = "2018"

[dependencies]
docopt = "1"
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }
regex = "1.5.4"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_cmd = "1.0.2"
cargo-release = "0.16.2"
colored = "2.0"
criterion = "0.3"
predicates = "1.0.8"

[[bench]]
name = "benchmark_cli"
harness = false
